# NerdGGuy.github.io

./: README.md  blog.cabal  index.html
posts/: 1487157964.lhs  1487158273.lhs  1487160584.lhs
src/: main.hs
src/Data/: Types.hs
src/Singletons/: Char.hs
